[package]
name = "twitterapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
uuid = {version="1.8.0",features=["serde","v4"]}
actix-rt = "1.1.0"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
